Добавил модуль конвертации в YUV + Определил структуру проекта

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,18 +8,62 @@ set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
-
-add_executable(YUVOverlay
-  main.cpp
-  bmpreader.h bmpreader.cpp
+# ========== Файловая структура проекта ==========
+set(SOURCES
+    Src/main.cpp
+    Src/BMPReader.cpp
+    Src/YUVConverter.cpp
 )
-target_link_libraries(YUVOverlay Qt${QT_VERSION_MAJOR}::Core)
 
+set(HEADERS
+    Inc/BMPReader.h
+    Inc/YUVConverter.h
+)
+
+set(RESOURCES
+    Resources/input.bmp
+)
+
+foreach(file ${SOURCES} ${HEADERS})
+    if(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${file})
+        message(FATAL_ERROR "File not found: ${CMAKE_CURRENT_SOURCE_DIR}/${file}")
+    endif()
+endforeach()
+
+# Исполняемый файл:
+add_executable(YUVOverlay ${SOURCES} ${HEADERS})
+
+# Подключение заголовков:
+target_include_directories(YUVOverlay PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/Inc
+)
+
+# Копирование ресурсов в выходную директорию:
+add_custom_command(TARGET YUVOverlay POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+        ${CMAKE_CURRENT_SOURCE_DIR}/Resources/input.bmp
+        $<TARGET_FILE_DIR:YUVOverlay>
+    COMMENT "Copying resources to output directory"
+)
+
+
+# Линковка с системными библиотеками
+find_package(Threads REQUIRED)
+target_link_libraries(YUVOverlay PRIVATE
+    Qt${QT_VERSION_MAJOR}::Core
+    Threads::Threads
+)
+
+# Установка только RUNTIME для исполняемого файла
 include(GNUInstallDirs)
 install(TARGETS YUVOverlay
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
+
+install(FILES ${RESOURCES}
+    DESTINATION ${CMAKE_INSTALL_DATADIR}/YUVOverlay
 )
